--- a/project/src/components/title/titleStyles.scss
+++ b/project/src/components/title/titleStyles.scss
@@ -1,8 +1,17 @@
 @import "../../utils/variables.scss";
 
-.main__title {
-    font-size: 32px;
-    font-weight: bold;
+.main__titles {
+    display: flex; 
+    justify-content: space-between;
     margin-top: 16px;
-    color: $pantoneBlue072C;
+    .title__reminders {
+        font-size: 32px;
+        font-weight: bold;
+        color: $pantoneBlue072C;
+    }
+    .title__length {
+        font-size: 32px;
+        font-weight: bold;
+        color: $pantoneBlue072C;
+    }
 }
