--- a/project/src/utils/variables.scss
+++ b/project/src/utils/variables.scss
@@ -1,5 +1,5 @@
 $pantoneCoolGray2C: #D0CFCD;
-$pantoneCoolGray4C: #BBBBBB;
-$pantoneCoolGray8C: #898A8D;
+$pantoneCoolGray7C: #98989A;
+$pantoneCoolGray11C: #54565A;
 $pantoneNeutralBlackC: #222222;
 $pantoneBlue072C: #000F9F;
