--- a/project/src/components/title/titleStyles.scss
+++ b/project/src/components/title/titleStyles.scss
@@ -11,8 +11,7 @@
     }
     .title__length {
         font-size: 32px;
-        font-weight: bold;
-        color: $pantoneBlue072C;
+        color: $pantoneNeutralBlackC;
         margin-right: 8px;
     }
 }
